syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "v1/application_type.proto";
import "v1/client_approval.proto";
import "v1/grant_type.proto";
import "v1/public_keys_configuration.proto";
import "v1/refresh_token_rotation_type.proto";
import "v1/response_type.proto";
import "v1/token_endpoint_auth_method.proto";

option go_package = "github.com/dritelabs/accounts/pb";

message Client {
  string id = 1;
  string user_id = 2;
  repeated string contacts = 3;
  repeated ClientApproval client_approvals = 4;
  string description = 5;
  repeated GrantType grant_types = 6;
  bool is_first_party = 7;
  repeated google.protobuf.Any jwks = 8;
  string jwks_uri = 9;
  string logo_uri = 10;
  string name = 11;
  string policy_uri = 12;
  PublicKeysConfiguration public_keys_configuration = 13;
  repeated string redirect_uris = 14;
  repeated RefreshTokenRotationType refresh_token_rotation_type = 15;
  repeated ResponseType response_types = 16;
  string secret = 17;
  repeated string scope = 18;
  string software_id = 19;
  string software_version = 20;
  ApplicationType type = 21;
  string tos_uri = 22;
  TokenEndpointAuthMethod token_endpoint_auth_method = 23;
  string uri = 24;
  google.protobuf.Timestamp created_at = 25;
  google.protobuf.Timestamp updated_at = 26;
}